--- a/CakeTickBoard/CakeTickBoard.csproj
+++ b/CakeTickBoard/CakeTickBoard.csproj
@@ -201,11 +201,23 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201806071821490_InitialCreate.cs" />
+    <Compile Include="Migrations\201806071821490_InitialCreate.Designer.cs">
+      <DependentUpon>201806071821490_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201806071912094_AddRankingsTableToDatabase.cs" />
+    <Compile Include="Migrations\201806071912094_AddRankingsTableToDatabase.Designer.cs">
+      <DependentUpon>201806071912094_AddRankingsTableToDatabase.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Migrations\Seed\SeedRankings.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\CakeRanking.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModels\UserViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
@@ -282,6 +294,14 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.3.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.3.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201806071821490_InitialCreate.resx">
+      <DependentUpon>201806071821490_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201806071912094_AddRankingsTableToDatabase.resx">
+      <DependentUpon>201806071912094_AddRankingsTableToDatabase.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
