--- a/CakeTickBoard/Web.config
+++ b/CakeTickBoard/Web.config
@@ -102,6 +102,11 @@
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
     </providers>
+    <contexts>
+      <context type="CakeTickBoard.Models.ApplicationDbContext, CakeTickBoard">
+        <databaseInitializer type="CakeTickBoard.Migrations.DatabaseInitializer, CakeTickBoard" />
+      </context>
+    </contexts>
   </entityFramework>
   <system.codedom>
     <compilers>
