--- a/CakeTickBoard.Container/CakeTickBoard.Container.csproj
+++ b/CakeTickBoard.Container/CakeTickBoard.Container.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Unity" Version="5.8.6" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\CakeTickBoard.Application.Logic\CakeTickBoard.Application.Logic.csproj" />
     <ProjectReference Include="..\CakeTickBoard.Respository\CakeTickBoard.Respository.csproj" />
   </ItemGroup>
